# PlayLogic

./: Dockerfile  README.md  openenv.yaml  pyproject.toml  requirements.txt  test_ma.py
playlogic/: Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
playlogic/client/: client.py
playlogic/server/: Dockerfile  __init__.py  app.py  environment.py  formation.py  index.html  opponent.py  physics.py  rewards.py  visualization.py
playlogic/tests/: eval_visual.py  eval_visual_agents.py  test_env.py
playlogic/training/: agent_policy.py  agent_utils.py  train_agents.py  train_cpu.py  traning.ipynb
training/: HF_TRAINING.md  playlogic_grpo_colab.ipynb  requirements-training.txt  train_grpo.py  traning.ipynb
